--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -30,7 +30,9 @@
                         <button class="btn btn-danger mr-2" type="submit" name="areaId" th:value="${area.id}">Delete</button>
                     </form>
                     <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update Area</a>
-                    <a class="btn btn-success" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
+                    <a class="btn btn-success mr-2" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
+                    <a class="btn btn-dark mr-2" th:href="@{/area/{areaId}/elevator-simulation(areaId=${area.id})}">SIMULATION</a>
+
                 </div>
 
             <!-- Elevator Information -->
