--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -16,10 +16,10 @@
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js}"
             type="text/javascript"></script>
 
-    <script th:src="@{../static/js/ElevatorNavigator.js}" type="text/javascript"></script>
+<!--    <script th:src="@{../static/js/ElevatorNavigator.js}" type="text/javascript"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/static/js/AlertError.js" type="text/javascript"></script>
-    <script src="../static/js/ElevatorNavigator.js" type="text/javascript"></script>
+<!--    <script src="../static/js/ElevatorNavigator.js" type="text/javascript"></script>-->
     <style>
         #elevator-panel {
             max-width: 80vw;
@@ -285,13 +285,19 @@
             Back
         </a>
     </div>
+    <input class="input-info" id="host" name="mqttConnectionHost" readonly th:value="${mqttConnection.host}">
+    <input class="input-info" id="port" name="mqttConnectionPort" readonly th:value="${mqttConnection.port}">
+    <input class="input-info" id="username" name="mqttConnectionUsername" readonly th:value="${mqttConnection.username}">
+    <input class="input-info" id="password" name="mqttConnectionPassword" readonly th:value="${mqttConnection.password}">
+
 </div>
 <script type="text/javascript">
-    var host = 'tkevn.ddns.net';
-    var port = 8001;
+
+    var host = document.getElementById("host").value;
+    var port = parseInt(document.getElementById("port").value);
+    var username = document.getElementById("username").value;
+    var password = document.getElementById("password").value;
     var useTLS = false;
-    var username = "user1";
-    var password = "minh";
     cleansession = true;
     var mqtt;
     var reconnectTimeout = 2000;
