--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
     <div class="container">
-      <a class="navbar-brand ml-4" href="#">TKE Monitoring & Controlling System</a>
+      <a class="navbar-brand ml-4" href="#">I-Connect</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
