--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -285,10 +285,10 @@
             Back
         </a>
     </div>
-    <input class="input-info" id="host" name="mqttConnectionHost" readonly th:value="${mqttConnection.host}">
-    <input class="input-info" id="port" name="mqttConnectionPort" readonly th:value="${mqttConnection.port}">
-    <input class="input-info" id="username" name="mqttConnectionUsername" readonly th:value="${mqttConnection.username}">
-    <input class="input-info" id="password" name="mqttConnectionPassword" readonly th:value="${mqttConnection.password}">
+    <input class="input-info" id="host" name="mqttConnectionHost" readonly th:value="${mqttConnection.host}" hidden>
+    <input class="input-info" id="port" name="mqttConnectionPort" readonly th:value="${mqttConnection.port}"hidden>
+    <input class="input-info" id="username" name="mqttConnectionUsername" readonly th:value="${mqttConnection.username}"hidden>
+    <input class="input-info" id="password" name="mqttConnectionPassword" readonly th:value="${mqttConnection.password}"hidden>
 
 </div>
 <script type="text/javascript">
@@ -358,7 +358,7 @@
         // Connection succeeded; subscribe to lift of topic:display
         // for (var i = 0; i < 8; i++) {
 
-        var subscribetopicdisplay = "/Vietnam/Hanoi/Showzoom/PL1/elvtopc/indicator";
+        var subscribetopicdisplay = "Vietnam/Hanoi/Showzoom/PL1/elvtopc/indicator";
         mqtt.subscribe(subscribetopicdisplay, {qos: 0});
         var subscribetopiccarcall = "Vietnam/Hanoi/Showzoom/PL1/elvtopc/carcall";
         mqtt.subscribe(subscribetopiccarcall, {qos: 0});
@@ -419,31 +419,48 @@
     function onMessageArrived(message) {
         var topic = message.destinationName;
         var payload = message.payloadString;
-        alert(topic + " : " + payload);
+        // alert(topic + " : " + payload);
 
         // Alert the formatted hexadecimal payload
         if (topic ==  "Vietnam/Hanoi/Showzoom/PL1/elvtopc/indicator"){
+
             var payloadBytes = message.payloadBytes;
 
             // Convert payload bytes to hexadecimal string
             var payloadHex = bytesToHex(payloadBytes);
-
             // Insert space after every two characters
             payloadHex = insertSpaceEveryNChars(payloadHex, 4);
-            handleInputTopicDisplay(payloadHex.replace(/\s/g, ''));
+            var result =handleInputTopicDisplay(payloadHex.replace(/\s/g, ''));
+
+            if (result === null) {
+                console.log("Invalid input length. Please enter a 12-character input.");
+            } else {
+                // Sử dụng các tham số trả về
+                var floor = result.floor;
+                var direction = result.direction;
+                var status = result.status;
+
+                // In ra các giá trị đã nhận được
+                console.log("Floor: " + floor);
+                console.log("Direction: " + direction);
+                console.log("Status: " + status);
+                $('#display').val(floor);
+
+                if(direction != "Unknown") {
+                    $('#direction').val(direction);
+                }
+                $('#onoff').val(status)
+            }
         }
         if (topic ==  "Vietnam/Hanoi/Showzoom/PL1/elvtopc/carcall") {
 
             var payloadBytes = message.payloadBytes;
-
             // Convert payload bytes to hexadecimal string
             var payloadHex = bytesToHex(payloadBytes);
-
             // Insert space after every two characters
             payloadHex = insertSpaceEveryNChars(payloadHex, 2);
             // handleInput(payloadHex.replace(/\s/g, ''));
             var result = findCalledFloors(payloadHex);
-            alert(result);
         }
 
         if (topic ==  "/display"){
@@ -667,13 +684,13 @@
     }
     function handleInputTopicDisplay(input) {
         // var input = document.getElementById("input").value;
-
+        // alert("1")
         // Check if input is valid
         if (input.length !== 10) {
-            alert("Invalid input length. Please enter a 12-character input.");
+            // alert("Invalid input length. Please enter a 12-character input.");
             return;
         }
-        alert("Input: " + input);
+        // alert("Input: " + input);
         // Extracting d0, d1, d2, d3, d4 from input
         var d0 = input.substring(0, 2);
         var d1 = input.substring(2, 4);
@@ -715,15 +732,19 @@
             status = "Active";
         }
 
-        alert("d0: " + d0 + "\n" +
-            "d1: " + d1 + "\n" +
-            "d2: " + d2 + "\n" +
-            "d3: " + d3 + " (" + direction + ")\n" +
-            "d4: " + d4 + "\n\n" +
-            "Floor: " + floor + "\n" +
-            "Direction: " + direction + "\n" +
-            "Status: " + status);
-
+        // alert("d0: " + d0 + "\n" +
+        //     "d1: " + d1 + "\n" +
+        //     "d2: " + d2 + "\n" +
+        //     "d3: " + d3 + " (" + direction + ")\n" +
+        //     "d4: " + d4 + "\n\n" +
+        //     "Floor: " + floor + "\n" +
+        //     "Direction: " + direction + "\n" +
+        //     "Status: " + status);
+        return {
+            floor: floor,
+            direction: direction,
+            status: status
+        };
 
     }
     function convertHex(hexInput) {
