--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -602,17 +602,26 @@
         document.getElementById("messages").innerHTML += "<span> Message to topic " + topic + " with value = " + msg + " is sent </span><br>";
     }
 
+
     function carcallClick() {
-        var msg = document.getElementById("carcall").value;
-        var topic = elevator + "/" + "carcall";
+        alert("carcall")
+        var input = document.getElementById("carcall").value;
 
-        var value = parseInt(msg);
-        if (isNaN(value) || value < 0 || value > numFloors) {
-            alertError("Invalid Floor Number")
-            return;
-        }
+        // var topic = elevator + "/" + "carcall";
+        var topic = "Vietnam/Hanoi/Showzoom/PL1/elvtopc/carcall";
 
-        Message = new Paho.MQTT.Message(msg);
+        var value = parseInt(input);
+        var floors = [];
+        floors.push(value)
+
+        var signal = generateElevatorCallSignal(floors);
+        mqtt.publish(topic, signal, {qos: 0});
+        // if (isNaN(value) || value < 0 || value > numFloors) {
+        //     alertError("Invalid Floor Number")
+        //     return;
+        // }
+
+        Message = new Paho.MQTT.Message(signal);
         Message.destinationName = topic;
         mqtt.send(Message);
         document.getElementById("messages").innerHTML += "<span> Message to topic " + topic + " with value = " + msg + " is sent </span><br>";
@@ -779,6 +788,33 @@
         }
 
         return result;
+    }
+    function generateElevatorCallSignal(floors) {
+        // Tìm số phần tử cần thiết cho signalArray
+        var maxFloor = Math.max(...floors);
+        var signalArraySize = Math.ceil(maxFloor / 8);
+        var signalArray = Array(signalArraySize).fill('00000000');
+
+        // Lặp qua các tầng đã gọi và thiết lập bit tương ứng trong signalArray
+        floors.forEach(function(floor) {
+            var index = Math.floor((floor - 1) / 8);
+            var bitPosition = 7 - ((floor - 1) % 8);
+            var binaryString = signalArray[index];
+            var updatedBinaryString = binaryString.substring(0, bitPosition) + '1' + binaryString.substring(bitPosition + 1);
+            signalArray[index] = updatedBinaryString;
+        });
+
+        // Chuyển đổi từng chuỗi nhị phân thành giá trị thập lục phân
+        var result = signalArray.map(function(binaryString) {
+            return parseInt(binaryString, 2).toString(16).toUpperCase().padStart(2, '0');
+        });
+
+        // Điền thêm các phần tử '00' để đảm bảo mảng có độ dài là bội số của 8
+        while (result.length < 8) {
+            result.push('00');
+        }
+
+        return result.join(' ');
     }
 </script>
 <script crossorigin="anonymous"
