--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -19,11 +19,12 @@
     <link href="/static/css/simulation.css" media="all" rel="stylesheet" type="text/css"/>
 <!--    <script src="/static/js/AlertError.js" type="text/javascript"></script>-->
 
-    <script src="/static/js/SimulationNavigator.js"></script>
+
 
     <script src="/static/js/simulation/utils.js"></script>
 
     <script src="/static/js/simulation/config.js"></script>
+    <script src="/static/js/simulation/SimulationNavigator.js"></script>
     <script src="/static/js/simulation/building_display.js"></script>
     <script src="/static/js/simulation/elevator-system.js"></script>
     <script src="/static/js/simulation/binding.js"></script>
@@ -45,7 +46,10 @@
     <div th:text="${elevator.name}" class="elevator-name" th:id="'elevatorName_' + ${elevator.id}" hidden></div>
     <div th:text="${elevator.numFloors}" class="elevator-num-floors" th:id="'elevatorNumFloors_' + ${elevator.id}" hidden></div>
 </div>
-<button onclick="controller_move1(1)" style="position: fixed; top: 10px; right: 10px;">Move</button>
+<!--<button onclick="controller_move(1)" style="position: fixed; top: 10px; right: 10px;">Move</button>-->
+<!--<button onclick="controller_move_up_N_floors(1, 3)" style="position: fixed; top: 50px; right: 10px;">Move</button>-->
+<!--<button onclick="controller_move_up(1)" style="position: fixed; top: 100px; right: 10px;">Move</button>-->
+
 
 <!--<div th:replace="fragments/header :: header"></div>-->
 <div class="container-a">
