--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -31,8 +31,9 @@
                     </form>
                     <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update Area</a>
                     <a class="btn btn-success mr-2" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
+                    <div th:if="${area.id == 1}">
                     <a class="btn btn-dark mr-2" th:href="@{/area/{areaId}/elevator-simulation(areaId=${area.id})}">SIMULATION</a>
-
+                    </div>
                 </div>
 
             <!-- Elevator Information -->
