--- a/src/main/resources/templates/mqttconnection/detail.html
+++ b/src/main/resources/templates/mqttconnection/detail.html
@@ -36,10 +36,10 @@
                     <input type="text" name="password" th:value="${mqttConnection.password}" class="form-control">
                 </div>
 
-                <div class="form-group">
-                    <label class="control-label">Path:</label>
-                    <input type="text" name="path" th:value="${mqttConnection.path}" class="form-control">
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label class="control-label">Path:</label>-->
+<!--                    <input type="text" name="path" th:value="${mqttConnection.path}" class="form-control">-->
+<!--                </div>-->
 
                 <button type="submit" class="btn btn-primary float-right">Update Config</button>
             </form>
