--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -239,16 +239,16 @@
                                         </button>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td class="text-center" colspan="2">
-                                        <button class="btn btn-success btn-lg" onclick="opendoor()" type="button">&lt;|&gt;
-                                            Open
-                                        </button>
-                                        <button class="btn btn-danger btn-lg" onclick="closedoor()" type="button">&gt;|&lt;
-                                            Close
-                                        </button>
-                                    </td>
-                                </tr>
+<!--                                <tr>-->
+<!--                                    <td class="text-center" colspan="2">-->
+<!--                                        <button class="btn btn-success btn-lg" onclick="opendoor()" type="button">&lt;|&gt;-->
+<!--                                            Open-->
+<!--                                        </button>-->
+<!--                                        <button class="btn btn-danger btn-lg" onclick="closedoor()" type="button">&gt;|&lt;-->
+<!--                                            Close-->
+<!--                                        </button>-->
+<!--                                    </td>-->
+<!--                                </tr>-->
                                 </tbody>
                             </table>
                         </div>
