--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -19,9 +19,11 @@
     <link href="/static/css/simulation.css" media="all" rel="stylesheet" type="text/css"/>
 <!--    <script src="/static/js/AlertError.js" type="text/javascript"></script>-->
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="/static/js/simulation/utils.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/static/js/ElevatorNavigator.js" type="text/javascript"></script>
 
     <script src="/static/js/simulation/config.js"></script>
     <script src="/static/js/simulation/SimulationNavigator.js"></script>
@@ -29,6 +31,7 @@
     <script src="/static/js/simulation/elevator-system.js"></script>
     <script src="/static/js/simulation/binding.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="/static/js/AlertError.js" type="text/javascript"></script>
 
 <!--    <script src="js/utils.js"></script>-->
 <!--    <script src="js/config.js"></script>-->
@@ -46,42 +49,13 @@
     <div th:text="${elevator.name}" class="elevator-name" th:id="'elevatorName_' + ${elevator.id}" hidden></div>
     <div th:text="${elevator.numFloors}" class="elevator-num-floors" th:id="'elevatorNumFloors_' + ${elevator.id}" hidden></div>
 </div>
-<button onclick="controller_move(1,4)" style="position: fixed; top: 10px; right: 10px;">Move</button>
-<button onclick="controller_move(1,2)" style="position: fixed; top: 50px; right: 10px;">Move</button>
-<button onclick="controller_move(1,6)" style="position: fixed; top: 100px; right: 10px;">Move</button>
+<!--<button onclick="controller_move(1,4)" style="position: fixed; top: 10px; right: 10px;">Move</button>-->
+<!--<button onclick="controller_move(1,2)" style="position: fixed; top: 50px; right: 10px;">Move</button>-->
+<!--<button onclick="controller_move(1,6)" style="position: fixed; top: 100px; right: 10px;">Move</button>-->
 
 
 <!--<div th:replace="fragments/header :: header"></div>-->
 <div class="container-a">
-<!--<div class="head-info">-->
-<!--    <div class="building-info">-->
-<!--        <p>Number of floors：<span id="floor_nums_info">10</span>&nbsp;<button class="btn btn-primary .btn-xs change_building-button"-->
-<!--                                                                              id="change-floor-nums"-->
-<!--                                                                              type="button">-->
-<!--            Change-->
-<!--        </button>&nbsp; Number of elevator：<span id="elevator_nums_info">3</span>-->
-<!--            <button class="btn btn-primary .btn-xs change_building-button" id="change-elevator_nums"-->
-<!--                    type="button">Change-->
-<!--            </button>-->
-
-<!--        </p>-->
-<!--        <div>-->
-<!--            <div> Change the elevator position (effective when all elevators are stationary)</div>-->
-<!--            <button class="btn btn-info .btn-xs change_building-button half-one-half-distribution"-->
-<!--                    type="button">Half of the elevators are on the first floor and half are scattered around-->
-<!--            </button>-->
-<!--            <button class="btn btn-info .btn-xs change_building-button all-one"-->
-<!--                    type="button">All elevators are on the first floor-->
-<!--            </button>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <div>Smart mode: All elevators automatically analyze the system status when idle and move to floors lacking elevators</div>-->
-<!--            <button class="btn btn-info .btn-xs enable-ai-mode-button"-->
-<!--                    type="button">Activate smart mode-->
-<!--            </button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 <div class="g-content" id="g-building">
     <div class="g-take-place"></div>
     <div class="g-container"></div>
