--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -51,7 +51,7 @@
             <a class="nav-link navbar-text" href="/building/1">Building</a>
           </li>
             <li class="nav-item ml-auto">
-                <a th:if="${role == 'ADMIN' || role == 'MANAGER'}" class="nav-link navbar-text" href="/permission">Permission</a>
+                <a th:if="${role == 'ADMIN'}" class="nav-link navbar-text" href="/permission">Permission</a>
             </li>
 
 
