--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -23,7 +23,7 @@
 
     <script src="/static/js/simulation/utils.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/static/js/ElevatorNavigator.js" type="text/javascript"></script>
+<!--    <script src="/static/js/ElevatorNavigator.js" type="text/javascript"></script>-->
 
     <script src="/static/js/simulation/config.js"></script>
     <script src="/static/js/simulation/SimulationNavigator.js"></script>
