very important update

--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -134,7 +134,7 @@
                 <th>Direction</th>
                 <th>Status</th>
                 <th>Door</th>
-                <th>Auto</th>
+<!--                <th>Auto</th>-->
                 <th>ATT</th>
             </tr>
             </thead>
@@ -147,7 +147,7 @@
                     <!--                    <input id="doorstatus" name="doorstatus" readonly type="text" value="Open">-->
                     <img id="doorImage" src="/images/dooropen" alt="Door Status" style="height: 2em; width: auto;">
                 </td>
-                <td><input id="liftstatus" name="liftstatus" readonly type="text" value="Auto"></td>
+<!--                <td><input id="liftstatus" name="liftstatus" readonly type="text" value="Auto"></td>-->
                 <td><input id="att" onclick="attClick()" readonly type="text" value="Active"></td>
                 <!-- Add more rows for additional floors -->
             </tbody>
@@ -173,7 +173,7 @@
                                     type="button">Connect
                             </button>
                             <button class="btn btn-danger btn-lg" id="btnDisconnect" onclick="startDisconnect()"
-                                    type="button">Disconnect
+                                    type="button" hidden>Disconnect
                             </button>
                         </div>
                     </div>
@@ -238,16 +238,16 @@
                                         </button>
                                     </td>
                                 </tr>
-<!--                                <tr>-->
-<!--                                    <td class="text-center" colspan="2">-->
-<!--                                        <button class="btn btn-success btn-lg" onclick="opendoor()" type="button">&lt;|&gt;-->
-<!--                                            Open-->
-<!--                                        </button>-->
-<!--                                        <button class="btn btn-danger btn-lg" onclick="closedoor()" type="button">&gt;|&lt;-->
-<!--                                            Close-->
-<!--                                        </button>-->
-<!--                                    </td>-->
-<!--                                </tr>-->
+                                <tr>
+                                    <td class="text-center" colspan="2">
+                                        <button class="btn btn-success btn-lg" onclick="opendoor()" type="button">&lt;|&gt;
+                                            Open
+                                        </button>
+                                        <button class="btn btn-danger btn-lg" onclick="closedoor()" type="button">&gt;|&lt;
+                                            Close
+                                        </button>
+                                    </td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
