--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -295,9 +295,9 @@
         font-size: 40px;
         position: relative;
         padding-right: 4px;
-        text-align: center;
+
         height: 100%;
-        width: 56%;
+        width: 70%;
         right: -6%;
         background-color: #1c1c1c;
         color: #ff0000;
@@ -306,9 +306,11 @@
     .floor-number {
         display: inline-block;
         font-family: 'UnidreamLED';
+        /*text-align: right;*/
+        text-align: right;
         position: absolute;
         width: 60%;
-        right: 0;
+        right: 10%;
     }
 
     .elevator-direction {
@@ -317,7 +319,7 @@
         position: absolute;
         height: 100%;
         width: 40%;
-        left: 10%;
+        left: 5%;
         top: 8%;
         font-weight: bolder;
     }
@@ -479,7 +481,7 @@
 
     .floor-symbol {
         position: absolute;
-        left: 65%;
+        left: 65%;now-floor-info
         top: 4%;
         transform: translate(-50%, 0);
         font: 4em Helvetica;
