--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -5,6 +5,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Elevator Control Panel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js}"></script>
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js}"></script>
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js}"></script>
@@ -262,18 +266,39 @@
             <tr>
                 <td class="bg-dark text-white">Item Selected</td>
                 <td class="bg-danger text-white d-flex justify-content-between align-items-center">
-                    Timelife Door | <span class="arrow">&#9658;</span>
-                    <span class="bg-white text-danger rounded px-2">100,000</span>
+<!--                    Timelife Door | <span class="arrow">&#9658;</span>-->
+<!--&lt;!&ndash;                    <span class="bg-white text-danger rounded px-2">100,000</span>&ndash;&gt;-->
+                    <div class="dropdown">
+                        <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span style="font-weight: bold; text-align: left;">Timelife Door</span>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Door Rollers</a>
+                            <a class="dropdown-item" href="#">Times of Trip</a>
+                            <a class="dropdown-item" href="#">Scheduled Maintain</a>
+                            <a class="dropdown-item" href="#">Error Codes</a>
+                            <a class="dropdown-item" href="#">Warning Issue</a>
+                            <a class="dropdown-item" href="#">Timelife Ropes</a>
+                            <a class="dropdown-item" href="#">Timelife Inverter</a>
+                            <a class="dropdown-item" href="#">Timelife Mother Board</a>
+                        </div>
+                    </div>
                 </td>
             </tr>
             <tr>
                 <td class="bg-dark text-white">Ref Value</td>
-                <td class="bg-danger text-white"></td>
+<!--                <td class="bg-danger text-white"></td>-->
+                <td class="bg-danger text-white d-flex justify-content-between align-items-center text-center">
+                    100,000
+
+<!--                    <span class="arrow">&#9658;</span>-->
+                </td>
             </tr>
             <tr>
                 <td class="bg-dark text-white">Now Value</td>
-                <td class="bg-success text-white d-flex justify-content-between align-items-center">
-                    80,000 <span class="arrow">&#9658;</span>
+                <td class="bg-success text-white d-flex justify-content-between align-items-center text-center">
+                    80,000
+                    <!--                    <span class="arrow">&#9658;</span>-->
                 </td>
             </tr>
         </table>
