--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -26,7 +26,7 @@
 <!--    <script src="/static/js/ElevatorNavigator.js" type="text/javascript"></script>-->
 
     <script src="/static/js/simulation/config.js"></script>
-    <script src="/static/js/simulation/SimulationNavigator.js"></script>
+
     <script src="/static/js/simulation/building_display.js"></script>
     <script src="/static/js/simulation/elevator-system.js"></script>
     <script src="/static/js/simulation/binding.js"></script>
@@ -43,10 +43,10 @@
 <body>
 <div th:text="${numFloors}" id="numFloors" hidden></div>
 <div th:text="${numElevators}" id="numElevators" hidden></div>
-<input class="input-info" id="host" name="mqttConnectionHost" readonly th:value="${mqttConnection.host}" hidden>
-<input class="input-info" id="port" name="mqttConnectionPort" readonly th:value="${mqttConnection.port}" hidden>
-<input class="input-info" id="username" name="mqttConnectionUsername" readonly th:value="${mqttConnection.username}" hidden>
-<input class="input-info" id="password" name="mqttConnectionPassword" readonly th:value="${mqttConnection.password}" hidden>
+<input class="input-info" th:id="host" name="mqttConnectionHost" readonly th:value="${mqttConnection.host}" hidden>
+<input class="input-info" th:id="port" name="mqttConnectionPort" readonly th:value="${mqttConnection.port}" hidden>
+<input class="input-info" th:id="username" name="mqttConnectionUsername" readonly th:value="${mqttConnection.username}" hidden>
+<input class="input-info" th:id="password" name="mqttConnectionPassword" readonly th:value="${mqttConnection.password}" hidden>
 
 
 <div th:each="elevator : ${elevators}">
@@ -663,4 +663,5 @@
     var username = document.getElementById("username").value;
     var password = document.getElementById("password").value;
 </script>
+<script src="/static/js/simulation/SimulationNavigator.js"></script>
 </html>
