add openclose door

--- a/src/main/resources/templates/elevator/ele1.html
+++ b/src/main/resources/templates/elevator/ele1.html
@@ -244,10 +244,10 @@
                                 </tr>
                                 <tr>
                                     <td class="text-center" colspan="2">
-                                        <button class="btn btn-success btn-lg" onclick="opendoor()" type="button">&lt;|&gt;
+                                        <button class="btn btn-success btn-lg" onclick="openDoorClick()" type="button">&lt;|&gt;
                                             Open
                                         </button>
-                                        <button class="btn btn-danger btn-lg" onclick="closedoor()" type="button">&gt;|&lt;
+                                        <button class="btn btn-danger btn-lg" onclick="closeDoorClick()" type="button">&gt;|&lt;
                                             Close
                                         </button>
                                     </td>
